# groups

./: .dockerignore  .env  .env.example  .env.production  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  Taskfile.yml  diesel.toml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: docker-build.yml  rust.yml
db/init/: 001_extensions.sql
migrations/: 001_initial_schema.sql  002_seed_data.sql
migrations/2024-09-28-194451_groups/: up.sql
migrations/2024-11-01-145209_users/: up.sql
plans/: 001-OVERALL-DEVELOPMENT-PLAN.md  002-PASSWORD-MANAGEMENT-PLAN.md  README.md
src/: db.rs  groups.rs  lib.rs  main.rs  mod.rs  models.rs  password.rs  schema.rs
src/api/: auth.rs  groups_api.rs  groups_html.rs  hello.rs  mod.rs
src/database/: db.rs  models.rs  schema.rs
src/database/db/: groups.rs  users.rs
src/db/: connection.rs  group.rs  mod.rs  user.rs
src/db/models/: group.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/static/css/: style.css
src/templates/: groups.html  groups_new.html  index.html  layout.html  login.html  register.html
tests/: auth_integration_test.rs  auth_test.rs  db_group.rs  db_setup.rs  db_user.rs  homepage.spec.js  login.spec.js  register.spec.js  session.spec.js
