[package]
name = "groups"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "~4"
serde = { version = "~1", features = ["derive"] }
diesel = { version = "~2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15"
chrono = { version = "~0.4", features = ["serde"] }
argon2 = "0.5.3"


[build]
rustflags = ["- C", "target-cpu=native"]

[profile.release]
opt-level = 3 # 3 => Optimize for speed | s => Optimize for size 
