[package]
name = "groups"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.8.0"
actix-web = "~4"
serde = { version = "~1", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "~0.4", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.9.1"
thiserror = "2"
tera = "1"
actix-files = "0.6"

# [build]
# rustflags = ["- C", "target-cpu=native"]

[profile.release]
opt-level = 3 # 3 => Optimize for speed | s => Optimize for size 
lto = true # Link Time Optimization false, true (fat) or thin
# codegen-units = 1 # Number of codegen units to use for this target bigger, faster compilation but less optimization
strip = "debuginfo" # Strip debug information from the output binary
